Jdk5-12新特性总结_java8模块添加

--- a/jdk8/pom.xml
+++ b/jdk8/pom.xml
@@ -9,9 +9,10 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jdk5</artifactId>
+    <artifactId>jdk8</artifactId>
 
-    <name>jdk5</name>
+    <name>jdk8</name>
+    <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
     <properties>
