Jdk5-12新特性_ppt编写

--- a/java9/pom.xml
+++ b/java9/pom.xml
@@ -9,24 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jdk8</artifactId>
+    <artifactId>java9</artifactId>
 
-    <name>jdk8</name>
-    <!-- FIXME change it to the project's website -->
+    <name>java9</name>
     <url>http://www.example.com</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+
 
     <dependencies>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
-        </dependency>
+
     </dependencies>
 
     <build>
