--- a/jdk8_2.0/pom.xml
+++ b/jdk8_2.0/pom.xml
@@ -9,24 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jdk8</artifactId>
+    <artifactId>jdk8_2.0</artifactId>
 
-    <name>jdk8</name>
-    <!-- FIXME change it to the project's website -->
+    <name>jdk8_2.0</name>
     <url>http://www.example.com</url>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 
     <dependencies>
+
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.47</version>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
         </dependency>
+
+
+
     </dependencies>
 
     <build>
