--- a/jdk8_2.0/pom.xml
+++ b/jdk8_2.0/pom.xml
@@ -23,8 +23,12 @@
             <version>1.1.1</version>
         </dependency>
 
-
-
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.1.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
