--- a/jdk8_2.0/pom.xml
+++ b/jdk8_2.0/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>2.1.0.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
     </dependencies>
 
     <build>
